[gd_scene load_steps=12 format=3 uid="uid://ckmrkojeday20"]

[ext_resource type="Script" path="res://Instances/Bullet/BulletsEnemies/BulletEnemy1/BulletN.gd" id="1_xqbv4"]
[ext_resource type="PackedScene" uid="uid://bplfkb5uolvrb" path="res://Instances/Components/HitBox/HitBox.tscn" id="2_ogrr7"]
[ext_resource type="Texture2D" uid="uid://i1tufpxybhlh" path="res://Assets/blankbullet.png" id="3_q1dkk"]
[ext_resource type="Script" path="res://Scripts/LineTrail.gd" id="4_nl1ph"]
[ext_resource type="Texture2D" uid="uid://b6l8fu6uss63t" path="res://Assets/Dust.png" id="5_m14l8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j5a4u"]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_koult"]
radius = 4.12311

[sub_resource type="SpriteFrames" id="SpriteFrames_d5xyr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q1dkk")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_cc7kk"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.709091), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2832l"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_inrta"]
_data = [Vector2(0.0234375, 1), 0.0, 0.0, 0, 0, Vector2(0.421875, 0.727273), -2.58586, -2.58586, 0, 0, Vector2(0.515625, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="BulletN" type="Node2D"]
self_modulate = Color(1.5, 1.5, 1.5, 1)
script = ExtResource("1_xqbv4")
moveDirection = Vector2(0.5, 0.5)
enemyColor = Color(1, 0, 0, 1)
playerColor = Color(1, 1, 1, 1)

[node name="HitBox" parent="." instance=ExtResource("2_ogrr7")]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_j5a4u")

[node name="WallDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetect"]
shape = SubResource("CircleShape2D_koult")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_d5xyr")
animation = &"Idle"
autoplay = "Idle"

[node name="Timer" type="Timer" parent="."]

[node name="Line2D" type="Line2D" parent="."]
modulate = Color(1, 0.156863, 0.156863, 1)
show_behind_parent = true
width_curve = SubResource("Curve_cc7kk")
script = ExtResource("4_nl1ph")
lenght = 5

[node name="ImpactPaticle" type="CPUParticles2D" parent="."]
z_index = 9
z_as_relative = false
material = SubResource("CanvasItemMaterial_2832l")
emitting = false
amount = 5
lifetime = 0.3
one_shot = true
explosiveness = 0.72
texture = ExtResource("5_m14l8")
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 350.0
scale_amount_curve = SubResource("Curve_inrta")
anim_offset_max = 1.0
